# django-magic-link

./: .flake8  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt
src/magic_link/: __about__.py  admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
src/magic_link/templates/magic_link/: home.html  sign_in.html
